service-mesh/fault-injection/virtual_service_abort.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world-vs
spec:
  hosts:
  - helloworld
  http:
  - fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 400
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
