service-mesh/fault-injection/virtual_service_delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world-vs-delay
spec:
  hosts:
  - helloworld
  http:
  - fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 5s
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
